# fireblocks-sdk-rs

./: .env-sample  .gitignore  Cargo.toml  Makefile  README-OPENAPI.md  README.md  SUPPORTED_ENDPOINTS.md  release.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  ci.yml  publish.yml  release-candidate.yml  release.yml  safety.yml  scheduled.yml  test.yml
.openapi-generator/: FILES
data/webhooks/: transaction_created_btc_inbound.json  transaction_created_eth_outbound.json  transaction_status_updated_btc_inbound_1.json  transaction_status_updated_btc_outbound_2.json  transaction_status_updated_eth_outbound_1.json  transaction_status_updated_eth_outbound_2.json  transaction_status_updated_eth_outbound_5.json  vault_account_asset_added.json
data/webhooks/transactions/: transaction_created_btc_outbound.json  transaction_created_eth_inbound.json  (+4 more)
docs/: AbiFunction.md  Account.md  AccountType.md  AddAbiRequestDto.md  AddAssetToExternalWalletRequest.md  AddAssetToExternalWalletRequestOneOf.md  AddAssetToExternalWalletRequestOneOf1.md  AddAssetToExternalWalletRequestOneOf1AdditionalInfo.md  AddAssetToExternalWalletRequestOneOf1AdditionalInfoOneOf.md  AddAssetToExternalWalletRequestOneOf1AdditionalInfoOneOf1.md  AddAssetToExternalWalletRequestOneOf1AdditionalInfoOneOf2.md  AddCollateralRequestBody.md  AddContractAssetRequest.md  AddCosignerRequest.md  AddCosignerResponse.md  AddExchangeAccountRequest.md  AddExchangeAccountResponse.md  AdditionalInfo.md  AdditionalInfoDto.md  AddressesResponse.md  AmlRegistrationResult.md  AmlRegistrationResultFullPayload.md  AmlScreeningResult.md  AmountAggregationTimePeriodMethod.md  AmountAndChainDescriptor.md  AmountInfo.md  ApiKey.md  ApiKeysPaginatedResponse.md  ApiUser.md  ApiUserRole.md  Asset.md  AssetAlreadyExistHttpError.md  AssetAmount.md  AssetBadRequestErrorResponse.md  AssetClass.md  AssetClassBeta.md  AssetConflictErrorResponse.md  AssetDetailsMetadata.md  AssetDetailsOnchain.md  AssetDoesNotExistHttpError.md  (+717 more)
examples/: vaults.rs
generator/: config.yaml  fireblocks-public-openapi.yaml  open_api_spec.yml  override.yaml  patch.sh  template-config.sh
generator/templates/: Cargo.mustache
src/: api.rs  assets.rs  client.rs  error.rs  jwt.rs  lib.rs  log.rs  page_client.rs  paged_client.rs  transaction_status.rs  transactions.rs  wallet.rs
src/api/: contracts.rs  external_wallets.rs  hooks.rs  internal_wallets.rs  mod.rs  staking.rs  transactions.rs  vaults.rs  wallet_connect.rs
src/apis/: audit_logs_api.rs  blockchains_assets_api.rs  blockchains_assets_beta_api.rs  compliance_api.rs  configuration.rs  contract_interactions_api.rs  contract_templates_api.rs  contracts_api.rs  cosigners_beta_api.rs  d_app_connections_api.rs  deployed_contracts_api.rs  exchange_accounts_api.rs  external_wallets_api.rs  fiat_accounts_api.rs  fireblocks_network_api.rs  gas_station_api.rs  gas_stations_api.rs  internal_wallets_api.rs  job_management_api.rs  key_link_api.rs  key_link_beta_api.rs  keys_beta_api.rs  mod.rs  network_connections_api.rs  nfts_api.rs  off_exchange_api.rs  payments_cross_border_settlement_api.rs  payments_payout_api.rs  policy_editor_beta_api.rs  smart_transfer_api.rs  smart_transfers_api.rs  staking_api.rs  tokenization_api.rs  transactions_api.rs  travel_rule_beta_api.rs  users_api.rs  vaults_api.rs  wallet_link_api.rs  webhooks_api.rs  webhooks_v2_beta_api.rs  (+4 more)
src/client/: poll.rs  transfer.rs  vault.rs  whitelist.rs
src/models/: _contracts__contract_id___asset_id__post_request.rs  _contracts_post_request.rs  _exchange_accounts__exchange_account_id__convert_post_request.rs  _exchange_accounts__exchange_account_id__internal_transfer_post_request.rs  _external_wallets__wallet_id___asset_id__post_request.rs  _external_wallets__wallet_id___asset_id__post_request_one_of.rs  _external_wallets__wallet_id___asset_id__post_request_one_of_1.rs  _external_wallets__wallet_id___asset_id__post_request_one_of_1_additional_info.rs  _external_wallets__wallet_id___asset_id__post_request_one_of_1_additional_info_one_of.rs  _external_wallets__wallet_id___asset_id__post_request_one_of_1_additional_info_one_of_1.rs  _external_wallets__wallet_id___asset_id__post_request_one_of_1_additional_info_one_of_2.rs  _fiat_accounts__account_id__redeem_to_linked_dda_post_request.rs  _internal_wallets__wallet_id___asset_id__post_request.rs  _internal_wallets_post_request.rs  _network_connections__connection_id__is_third_party_routing__asset_type__get_200_response.rs  _network_connections__connection_id__set_routing_policy_patch_200_response.rs  _network_connections__connection_id__set_routing_policy_patch_request.rs  _network_ids__network_id__set_discoverability_patch_request.rs  _network_ids__network_id__set_name_patch_request.rs  _network_ids__network_id__set_routing_policy_patch_request.rs  _network_ids_post_request.rs  _tap_draft_post_request.rs  _tap_draft_put_request.rs  _tap_publish_post_request.rs  _vault_accounts__vault_account_id___asset_id__addresses__address_id__put_request.rs  _vault_accounts__vault_account_id___asset_id__post_request.rs  _vault_accounts__vault_account_id__put_request.rs  _vault_accounts__vault_account_id__set_auto_fuel_post_request.rs  _vault_accounts__vault_account_id__set_customer_ref_id_post_request.rs  _vault_accounts_post_request.rs  _webhooks_resend__tx_id__post_request.rs  abi_function.rs  account.rs  account_type.rs  add_abi_request_dto.rs  add_asset_to_external_wallet_request.rs  add_asset_to_external_wallet_request_one_of.rs  add_asset_to_external_wallet_request_one_of_1.rs  add_asset_to_external_wallet_request_one_of_1_additional_info.rs  add_asset_to_external_wallet_request_one_of_1_additional_info_one_of.rs  (+673 more)
src/paged_client/: paged_transaction.rs  paged_vault.rs
src/types/: address.rs  asset.rs  connect.rs  fee.rs  hooks.rs  mod.rs  page.rs  staking.rs  transaction.rs  vault.rs  wallet.rs  webhooks.rs
tests/: paged_client.rs  setup.rs  staking.rs  supported_assets.rs  transactions_api.rs  transfers.rs  vaults_api.rs  wallet_connect.rs  wallets.rs
(+16 files in other folders)
