[package]
name = "fireblocks-sdk"
resolver = "2"
version = "0.4.0"
authors = ["Doug Chimento <dchimento@gmail.com>"]
description = "Rust implementation of the Fireblocks SDK"
readme = "README.md"
repository = "https://github.com/dougEfresh/fireblocks-sdk-rs"
homepage = "https://github.com/dougEfresh/fireblocks-sdk-rs"
documentation = "https://docs.rs/fireblocks-sdk"
license = "MIT"
keywords = ["fireblocks", "blockchain", "bitcoin", "solana"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"

[lib]
name = "fireblocks_sdk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
module_name_repetitions = "allow"
future_not_send = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
sql = ["sqlx"]

[dependencies]
serde_json = "1"
serde = "1.0.195"
serde_derive = { version = "1"}
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = true, features = ["json"] }
tokio = { version = "1", default-features = false,  features = ["time"] }
thiserror = "1"
bigdecimal = { version = "^0.3", features = ["serde"] }
url = "2"
chrono = { version = "0.4", default-features = true, features = ["serde"] }
tracing = {  version = "0.1" }
tokio-util = { version = "0.7", features = ["rt"] }
futures = { version = "0.3" }
sha2 = "0.10"
rand = "0.8"
sqlx = { version = "0.7", features = ["postgres"], optional = true }


[target.'cfg(any())'.dependencies]
openssl = { version = "0.10.55", optional = true } # needed to allow foo to build with -Zminimal-versions

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tokio = { version = "1", features = [ "full", "macros", "rt"] }
rstest = { version = "0.21" }
color-eyre = { version = "0.6" }
lazy_static = "1.4.0"
dotenvy = { version = "0.15" }
tokio-stream = {version = "0.1" }