[package]
name = "fireblocks-sdk"
resolver = "2"
version = "2.0.1"
authors = ["Doug Chimento <dchimento@gmail.com>"]
description = "Rust implementation of the Fireblocks SDK"
readme = "README.md"
repository = "https://github.com/dougEfresh/fireblocks-sdk-rs"
homepage = "https://github.com/dougEfresh/fireblocks-sdk-rs"
documentation = "https://docs.rs/fireblocks-sdk"
license = "MIT"
keywords = ["fireblocks", "blockchain", "bitcoin", "solana"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"

[lib]
name = "fireblocks_sdk"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
unused_imports = "allow"
non_snake_case = "allow"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
module_name_repetitions = "allow"
future_not_send = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
bon = ["dep:bon"]

[dependencies]
typed-builder = { version = "0.20"}
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
bon = { version = "2.3", optional = true }
tokio = { version = "1", default-features = false,  features = ["time"] }
thiserror = "1"
chrono = { version = "0.4", default-features = true, features = ["serde"] }
tracing = {  version = "0.1" }
tokio-util = { version = "0.7", features = ["rt"] }
futures = { version = "0.3" }

[target.'cfg(any())'.dependencies]
openssl = { version = "0.10", optional = true } # needed to allow foo to build with -Zminimal-versions

[dev-dependencies]
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tokio = { version = "1", features = [ "full"] }
lazy_static = "1.4.0"
dotenvy = { version = "0.15" }
tokio-stream = {version = "0.1" }

[[test]]
name = "vaults_api"
